Fix T46749: Texture paint & shadeless mode fails

Using shadeless did nothing in texture-paint mode.
(regression in 2.76)